--- a/kpServer.html
+++ b/kpServer.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>こっぺぱんサーバー</title>
-    <link rel="stylesheet" href="mc-server.css">
+    <link rel="stylesheet" href="kpServer.css">
 </head>
 <body>
 
