--- a/kpServer.html
+++ b/kpServer.html
@@ -115,7 +115,7 @@
         </div>
 
         <div class="frame">
-            <iframe class="frame" src="frame1.html"　frameborder="0"></iframe>
+            <iframe class="frame" src="https://naoyuu1225.github.io/koppepanframe/frame1.html"　frameborder="0"></iframe>
         </div>
         
 
